[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/GlobalAI.gd" type="Script" id=1]
[ext_resource path="res://Textures/Enemies/enemyWalking_1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Enemies/enemyWalking_2.png" type="Texture" id=3]
[ext_resource path="res://Textures/Enemies/enemyWalking_5.png" type="Texture" id=4]
[ext_resource path="res://Audio/jump-04.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 18.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.75, 21 )

[node name="Walker" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "Idle"

[node name="PlayerDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDamage"]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="EnemyDamage" type="Area2D" parent="."]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDamage"]
position = Vector2( 1, -28.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 26, 0 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="PlayBounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0

[connection signal="body_entered" from="PlayerDamage" to="." method="_on_PlayerDamage_body_entered"]
[connection signal="body_entered" from="EnemyDamage" to="." method="_on_EnemyDamage_body_entered"]
